# appy

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  how_to_update_python.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/inc/: crashhandler.h
app/src/main/cpp/src/: crashhandler.cpp  native.cpp  prehelpers.cpp
app/src/main/python/: bridge.py  java.py  logcat.py  main.py  state.py  user.py  utils.py  widgets.py
app/src/main/python/appy/: README.txt  setup.py
app/src/main/python/examples/: bitnet.py  bitpayoff.py  correction.py  countdown.py  crypto.py  pilling.py  plotting.py  pong.py  recurrent.py  rss.py  sharing.py  stocklist.py  tasklist.py  userpresent.py  weather.py  widget_develop.py
app/src/main/res/color/: color_danger_btn_bg.xml  color_danger_text.xml  color_dark_btn_bg.xml  color_info_btn_bg.xml  color_light_btn_bg.xml  color_outline_danger_text.xml  color_outline_dark_text.xml  color_outline_info_text.xml  color_outline_light_text.xml  color_outline_primary_text.xml  color_outline_secondary_text.xml  color_outline_success_text.xml  color_outline_warning_text.xml  color_primary_btn_bg.xml  color_secondary_btn_bg.xml  color_success_btn_bg.xml  color_warning_btn_bg.xml  color_warning_text.xml
app/src/main/res/drawable/: any_file.xml  circle.xml  drawable_danger_btn.xml  drawable_danger_btn_oval.xml  drawable_dark_btn.xml  drawable_dark_btn_oval.xml  drawable_info_btn.xml  drawable_info_btn_oval.xml  drawable_light_btn.xml  folder.xml  rect.xml  (+29 more)
app/src/main/res/drawable-v26/: app_default_shortcut.xml
(+1066 files in other folders)
